--- a/css/hanbok/hanbok_tradition/hanbok.css
+++ b/css/hanbok/hanbok_tradition/hanbok.css
@@ -66,10 +66,11 @@
   height: 100vh;
   display: flex;
   position: relative;
+  opacity: 0;
   z-index: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 }
 #hanbok_tradition #containerOne > div {
   width: 50vw;
@@ -160,6 +161,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
   position: relative;
 }
 #hanbok_tradition #containerTwo > div:nth-child(1) {
