--- a/css/pilgrimagePgae/pilgrimagePage.css
+++ b/css/pilgrimagePgae/pilgrimagePage.css
@@ -137,12 +137,19 @@ body {
   opacity: 0;
 }
 #background #pilgrimage_pageTwo > div:nth-child(1) > div:nth-child(2) {
-  width: 45vw;
+  width: 67vw;
+  height: 40vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  opacity: 0;
+}
+#background #pilgrimage_pageTwo > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) {
+  width: 44vw;
   color: #fff;
   font-size: 0.8rem;
   line-height: 30px;
   text-align: justify;
-  opacity: 0;
 }
 #background #indiText {
   font-size: 12rem;
@@ -156,22 +163,6 @@ body {
   transform: translateX(50px);
   color: #f3f3f3;
 }
-#background #newsText {
-  width: 100vw;
-  height: 35vh;
-  z-index: 1;
-  position: relative;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  opacity: 0;
-}
-#background #newsText > span {
-  margin-left: 15vw;
-  transform: scale(12.5, 25);
-  color: #BA3737;
-  font-weight: 1000;
-}
 #background #newsContainer {
   width: 100vw;
   z-index: 1;
@@ -183,14 +174,35 @@ body {
 }
 #background #newsContainer > div:nth-child(1) {
   width: 100vw;
+  height: 105vh;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+}
+#background #newsContainer > div:nth-child(1) #newsText {
+  width: 100vw;
+  height: 35vh;
+  z-index: 1;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+#background #newsContainer > div:nth-child(1) #newsText > span {
+  margin-left: 15vw;
+  transform: scale(12.5, 25);
+  color: #BA3737;
+  font-weight: 1000;
+}
+#background #newsContainer > div:nth-child(1) > div:nth-child(2) {
+  width: 100vw;
   height: 70vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  opacity: 0;
 }
-#background #newsContainer > div:nth-child(1) > div {
+#background #newsContainer > div:nth-child(1) > div:nth-child(2) > div {
   width: 90vw;
   height: 15vh;
   background-color: #595959;
@@ -202,7 +214,7 @@ body {
   align-items: center;
   font-weight: 700;
 }
-#background #newsContainer > div:nth-child(1) > div > p {
+#background #newsContainer > div:nth-child(1) > div:nth-child(2) > div > p {
   margin-left: 2vw;
   letter-spacing: 2px;
 }
@@ -279,7 +291,20 @@ body {
   justify-content: center;
   align-items: center;
 }
-#background > div:nth-child(7) {
+#background #pilgrimage_rising {
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+}
+#background #pilgrimage_rising > div:nth-child(1) {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+}
+#background #pilgrimage_rising > div:nth-child(1) > div:nth-child(1) {
   width: 100vw;
   height: 30vh;
   z-index: 10;
@@ -290,35 +315,26 @@ body {
   justify-content: flex-start;
   align-items: center;
 }
-#background > div:nth-child(7) > div:nth-child(1) {
-  width: 45vw;
+#background #pilgrimage_rising > div:nth-child(1) > div:nth-child(1) > div:nth-child(1) {
+  width: 37vw;
   height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
 }
-#background #pilgrimage_rising {
-  width: 100vw;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: column;
-}
-#background #pilgrimage_rising > div:nth-child(1) {
+#background #pilgrimage_rising > div:nth-child(1) > div:nth-child(2) {
   width: 90vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  opacity: 0;
 }
-#background #pilgrimage_rising > div:nth-child(1) > div {
+#background #pilgrimage_rising > div:nth-child(1) > div:nth-child(2) > div {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-#background #pilgrimage_rising > div:nth-child(1) > div > p {
+#background #pilgrimage_rising > div:nth-child(1) > div:nth-child(2) > div > p {
   height: 7vh;
   color: #fff;
   font-size: 2rem;
