--- a/css/pilgrimagePgae/pilgrimagePage.scss
+++ b/css/pilgrimagePgae/pilgrimagePage.scss
@@ -147,12 +147,20 @@ body {
       }
 
       &>div:nth-child(2) {
-        width: 45vw;
-        color: #fff;
-        font-size: 0.8rem;
-        line-height: 30px;
-        text-align: justify;
+        width: 67vw;
+        height: 40vh;
+        @include flexCenter(flex-start, center);
         opacity: 0;
+
+        // border: 1px solid red;
+
+        &>div:nth-child(1){
+          width: 44vw;
+          color: #fff;
+          font-size: 0.8rem;
+          line-height: 30px;
+          text-align: justify;
+        }
       }
     }
   }
@@ -171,28 +179,8 @@ body {
     transition: 0.7s ease;
     transform: translateX(50px);
     color: #f3f3f3;
-
   }
-
-
-
-  #newsText {
-    width: 100vw;
-    height: 35vh;
-    z-index: 1;
-    position: relative;
-    @include flexCenter(flex-start, center);
-    opacity: 0;
-
-
-    &>span {
-      margin-left: 15vw;
-      transform: scale(12.5, 25);
-      color: #BA3737;
-      font-weight: 1000;
-    }
-  }
-
+  
   #newsContainer {
     width: 100vw;
     // height: 200vh;
@@ -202,31 +190,53 @@ body {
     @include flexCenter(space-around, center);
     flex-direction: column;
 
-    &>div:nth-child(1) {
-      width: 100vw;
-      height: 70vh;
-      // border: 1px solid red;
-      @include flexCenter(space-around, center);
-      flex-direction: column;
-      opacity: 0;
+&>div:nth-child(1){
+  width: 100vw;
+  height: 105vh;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
 
-      &>div {
-        width: 90vw;
-        height: 15vh;
-        background-color: #595959;
-        border: 1px solid #fff;
+  #newsText {
+    width: 100vw;
+    height: 35vh;
+    z-index: 1;
+    position: relative;
+    @include flexCenter(flex-start, center);
 
-        color: #fff;
-        font-size: 2rem;
-        @include flexCenter(flex-start, center);
-        font-weight: 700;
+    &>span {
+      margin-left: 15vw;
+      transform: scale(12.5, 25);
+      color: #BA3737;
+      font-weight: 1000;
+    }
+  }
 
-        &>p {
-          margin-left: 2vw;
-          letter-spacing: 2px;
-        }
+  &>div:nth-child(2) {
+    width: 100vw;
+    height: 70vh;
+    // border: 1px solid red;
+    @include flexCenter(space-around, center);
+    flex-direction: column;
+
+    &>div {
+      width: 90vw;
+      height: 15vh;
+      background-color: #595959;
+      border: 1px solid #fff;
+
+      color: #fff;
+      font-size: 2rem;
+      @include flexCenter(flex-start, center);
+      font-weight: 700;
+
+      &>p {
+        margin-left: 2vw;
+        letter-spacing: 2px;
       }
     }
+  }
+}
 
     &>div:nth-child(2) {
       width: 100vw;
@@ -307,28 +317,7 @@ body {
 
 
 
-  &>div:nth-child(7) {
-    width: 100vw;
-    height: 30vh;
-    // position: absolute;
-    z-index: 10;
-    // left: 56vw;
-    // top: 422vh;
-    font-size: 10rem;
-    color: #BA3737;
-    font-weight: 800;
-    @include flexCenter(flex-start, center);
-
-    &>div:nth-child(1) {
-      width: 45vw;
-      height: 20vh;
-      @include flexCenter(center, center);
-      // border: 1px solid red;
-      opacity: 0;
-
-    }
-  }
-
+  
   #pilgrimage_rising {
     width: 100vw;
     // height: 80vh;
@@ -336,34 +325,57 @@ body {
     flex-direction: column;
     // opacity: 0;
 
-    &>div:nth-child(1) {
-      width: 90vw;
-      // height: 80vh;
-      @include flexCenter(space-around, center);
+    &>div:nth-child(1){
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
       opacity: 0;
 
-      &>div {
-        @include flexCenter(center, center);
-        flex-direction: column;
-
-        &>p {
-          height: 7vh;
-          color: #fff;
-          font-size: 2rem;
-          letter-spacing: 2px;
+      &>div:nth-child(1) {
+        width: 100vw;
+        height: 30vh;
+        // position: absolute;
+        z-index: 10;
+        // left: 56vw;
+        // top: 422vh;
+        font-size: 10rem;
+        color: #BA3737;
+        font-weight: 800;
+        @include flexCenter(flex-start, center);
+    
+        &>div:nth-child(1) {
+          width: 37vw;
+          height: 20vh;
+          @include flexCenter(center, center);
+          // border: 1px solid red;
+        }
+      }
+      &>div:nth-child(2) {
+        width: 90vw;
+        // height: 80vh;
+        @include flexCenter(space-around, center);
+        // opacity: 0;
+  
+        &>div {
+          @include flexCenter(center, center);
+          flex-direction: column;
+  
+          &>p {
+            height: 7vh;
+            color: #fff;
+            font-size: 2rem;
+            letter-spacing: 2px;
+          }
         }
       }
     }
 
+
     &>div:nth-child(2) {
       width: 100vw;
-      // height: 30vh;
-      // border: 1px solid red;
-      // @include flexCenter(flex-start, flex-start);
       display: flex;
       align-items: center;
       overflow-x: hidden;
-      // flex-direction: column;
       opacity: 0;
 
       &>div:nth-child(1) {
@@ -390,11 +402,6 @@ body {
               height: 50vh;
               top: 0;
               left: 38vw;
-              // &>div{
-              //   width: 40vw;
-              //   height: 50vh;
-              // background-color: #ccc;
-              // }
             }
           }
 
@@ -403,7 +410,6 @@ body {
             height: 80vh;
             // border: 1px solid #fff;
             @include flexCenter(flex-end, flex-end);
-            // flex-direction: column;
 
             &>div:nth-child(1) {
               width: 25vw;
