--- a/css/landingPage/landingPage.scss
+++ b/css/landingPage/landingPage.scss
@@ -88,9 +88,9 @@
                 height: 15px;
                 border-radius: 50%;
                 background-color: #fff;
-                box-shadow: 0 0 40px 20px #fff,
+                box-shadow: 0 0 80px 20px #fff,
                   0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.1),
-                  0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.1);
+                  0 0 80px 60px rgba($color: #FF9C0A, $alpha: 0.1);
                 // opacity: 0;
 
               }
@@ -107,9 +107,9 @@
                 height: 15px;
                 border-radius: 50%;
                 background-color: #fff;
-                box-shadow: 0 0 40px 20px #fff,
+                box-shadow: 0 0 80px 20px #fff,
                   0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.1),
-                  0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.1);
+                  0 0 80px 60px rgba($color: #FF9C0A, $alpha: 0.1);
                 // opacity: 0;
               }
             }
@@ -166,11 +166,10 @@
                 height: 15px;
                 border-radius: 50%;
                 background-color: #fff;
-                box-shadow: 0 0 40px 20px #fff,
+                box-shadow: 0 0 80px 20px #fff,
                   0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.1),
-                  0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.1);
+                  0 0 80px 60px rgba($color: #FF9C0A, $alpha: 0.1);
                 // opacity: 0;
-
               }
             }
 
@@ -185,9 +184,9 @@
                 height: 15px;
                 border-radius: 50%;
                 background-color: #fff;
-                box-shadow: 0 0 40px 20px #fff,
+                box-shadow: 0 0 80px 20px #fff,
                   0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.1),
-                  0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.1);
+                  0 0 80px 60px rgba($color: #FF9C0A, $alpha: 0.1);
                 // opacity: 0;
               }
             }
@@ -215,6 +214,40 @@
     }
   }
 }
+
+
+.glowing{
+  opacity: 0;  
+  animation-name: glowUp;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+}
+
+
+@keyframes glowUp {
+  
+  0% {
+    opacity: 0;
+    box-shadow: 0 0 20px 20px #fff,
+    0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.1),
+    0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.1);
+  }
+
+  75%{
+    opacity: 0.3;
+    box-shadow: 0 0 40px 20px #fff,
+    0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.5),
+    0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.5);
+  }
+  100%{
+    opacity: 0.5;
+    box-shadow: 0 0 60px 40px #fff
+    0 0 70px 40px rgba($color: #FFFD17, $alpha: 0.5),
+    0 0 100px 60px rgba($color: #FF9C0A, $alpha: 0.5);
+  }
+}
+
 
 @keyframes textGlow {
   0% {
